--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cloud_firestore: ^4.7.0
   firebase_storage: ^11.1.0
   provider: ^6.0.5
+  image_picker: ^0.8.7+5
   flutter_localizations:
     sdk: flutter
 
